--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -6,7 +6,9 @@ LICENSE*
 
 **/.git
 
-{{ if ne .chezmoi.os "darwin" -}}
+.config/zsh/zkbd/
+
+{{- if ne .chezmoi.os "darwin" }}
 .config/yabai/
 .config/skhd/
 {{- end }}
