--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -43,7 +43,7 @@
 # resize-overlay-duration = 4s 200ms
 
 font-family = "JetBrainsMono Nerd Font Mono"
-font-size = 18
+font-size = 16
 
 cursor-style = block
 cursor-style-blink = false
@@ -54,8 +54,8 @@ cursor-style-blink = false
 # window-height = 34
 # window-width = 134
 window-padding-balance = true
-window-padding-x = 0
-window-padding-y = 0
+window-padding-x = 2
+window-padding-y = 2
 window-padding-color = "extend"
 
 background-opacity = 0.95
@@ -70,7 +70,7 @@ quit-after-last-window-closed = true
 initial-window = true
 gtk-single-instance = true
 
-# title = ":D"
+title = " "
 
 macos-titlebar-style = tabs
 macos-titlebar-proxy-icon = hidden
